# telegram_sync_bot

./: .containerignore  .gitignore  CHANGELOG.md  Cargo.toml  Containerfile  README.md  delete.sh  kustomization.yaml  sync-bot.yaml
.github/scripts/: test.sh
.github/workflows/: release.yaml  test.yaml
bot/: Cargo.toml  Containerfile
bot/src/: bot.rs  cli.rs  context.rs  handler.rs  lib.rs  main.rs  storage.rs  utils.rs
bot/src/handler/: channel.rs  command.rs  message.rs  mod.rs  reaction.rs  utils.rs
bot/src/migration/: m20250310_104146_create_tables.rs
bot/src/storage/: db.rs  mod.rs  state.rs  storage_impl.rs  transport.rs
bot/src/storage/entity/: mod.rs
bot/src/storage/entity/inner/: chat_state.rs  file_handle.rs  file_state.rs  prelude.rs
entity/src/: chat_state.rs  file_handle.rs  file_state.rs  lib.rs
fav_sync_bot/: Cargo.toml
fav_sync_bot/src/: bot.rs  context.rs  handler.rs  main.rs  storage.rs  utils.rs
k8s/: bot.yaml  deployment.yaml  pv.yaml  pvc.yaml  server.yaml
migration/: Cargo.toml
migration/src/: lib.rs  m20250310_104146_create_tables.rs  main.rs
pod/: sync-bot.yaml
pod/bot/: Containerfile
server/: Containerfile  start.sh
