[workspace]
members = ["fav_sync_bot"]
resolver = "2"

[workspace.package]
version = "0.2.2"
edition = "2024"
authors = ["Louis <836250617@qq.com>"]
description = "A telegram bot to sync files to local server."
license = "MIT"

[workspace.dependencies]


[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
strip = "debuginfo"
panic = "abort"
