[package]
name = "telegram_sync_bot"
version = "0.5.0"
edition = "2024"
authors = ["Louis <836250617@qq.com>"]
description = "A telegram bot to sync files to local server."
license = "MIT"
keywords = ["telegram", "bot"]

[dependencies]
# env
dotenv = { version = "0.15" }
# cli
clap = { version = "4.5.31", features = ["derive"] }
# error
anyhow = { version = "1.0.86" }
# telegram
teloxide = { version = "0.13", features = ["macros"] }
# tracing
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# runtime
tokio = { version = "1.8", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "process",
] }
tokio-util = { version = "0.7.13" }
# rand
rand = { version = "0.9.0" }
# db
sea-orm = { version = "1.1.0", features = [
    "sqlx-sqlite",
    "runtime-tokio",
    "macros",
] }
sea-orm-migration = { version = "1.1.0", features = [
    "runtime-tokio",
    "sqlx-sqlite",
] }
# sync
parking_lot = { version = "0.12.3" }
# fs
walkdir = { version = "2.5.0" }

[features]
default = []
mock = ["sea-orm/mock"]
