[package]
name = "telegram_sync_bot"
version = "0.5.2"
edition = "2024"
authors = ["Louis <836250617@qq.com>"]
description = "A telegram bot to sync files to local server."
license = "MIT"
keywords = ["telegram", "bot"]

[dependencies]
# env
dotenv = { version = "0.15" }
# cli
clap = { version = "4.5.48", features = ["derive"] }
# error
anyhow = { version = "1.0.100" }
# telegram
teloxide = { version = "0.17", features = ["macros"] }
# tracing
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# runtime
tokio = { version = "1.47", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "process",
] }
tokio-util = { version = "0.7.16" }
# rand
rand = { version = "0.9.2" }
# db
sea-orm = { version = "1.1.10", features = [
    "sqlx-sqlite",
    "runtime-tokio",
    "macros",
] }
sea-orm-migration = { version = "1.1.10", features = [
    "runtime-tokio",
    "sqlx-sqlite",
] }
# sync
parking_lot = { version = "0.12.4" }
# fs
walkdir = { version = "2.5.0" }

[features]
default = []
mock = ["sea-orm/mock"]
