[package]
name = "fav_sync_bot"
version.workspace = true
edition.workspace = true

[dependencies]
# env
dotenv = { version = "0.15" }
# error
anyhow = { version = "1.0.86" }
# telegram
teloxide = { version = "0.13", features = ["macros", "ctrlc_handler"] }
# tracing
log = "0.4"
pretty_env_logger = "0.4"
# runtime
tokio = { version = "1.8", features = ["rt-multi-thread", "macros", "signal"] }
# serde
serde_json = { version = "1" }
# http
reqwest = { version = "0.12.12", features = [] }
# sha256
sha256 = { version = "1.6.0" }
