[package]
name = "fav_sync_bot"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
keywords = ["telegram", "bot"]

[dependencies]
# env
dotenv = { version = "0.15" }
# cli
clap = { version = "4.5.31", features = ["derive"] }
# error
anyhow = { version = "1.0.86" }
# telegram
teloxide = { version = "0.13", features = ["macros", "ctrlc_handler"] }
# tracing
log = "0.4"
pretty_env_logger = "0.4"
# runtime
tokio = { version = "1.8", features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "process",
] }
# serde
serde_json = { version = "1" }
# sha256
sha256 = { version = "1.6.0" }
# db
sled = { version = "0.34.7" }

[features]
default = []
